logo spacing and background fix

--- a/client/src/components/Broadcast/Broadcast.css
+++ b/client/src/components/Broadcast/Broadcast.css
@@ -15,11 +15,11 @@ body {
 .broadcast__main-container {
   text-align: center;
   background-color: skyblue;
-  min-height: 100%;
+  min-height: 100vh;
     background-position: center;
   background-attachment: fixed;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   top: 0;
   left: 0;
   margin: 0;
