--- a/client/src/components/Join/Join.css
+++ b/client/src/components/Join/Join.css
@@ -15,11 +15,11 @@ body {
 .join__outer-container {
   text-align: center;
   background-color: skyblue;
-  height: 100%;
+  height: 100vh;
     background-position: center;
   background-attachment: fixed;
   background-size: cover;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   top: 0;
   left: 0;
   margin: 0;
@@ -34,7 +34,7 @@ body {
 
 .site-logo {
     width: 40%;
-    padding-bottom: 15px;
+    padding: 25px;
 }
 
 .join__header {
